--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -856,25 +856,27 @@ ggarrange(og_plots, cs_plots, rf_plots,
 
 # Discussion
 
+Investigation of terrorism’s effects through public attitudes towards politics is a necessity so that to detect the social reaction to such thought-provoking disasters. Starting from Amélie Godefroidt’s pioneering study (Godefroidt, 2023), this paper takes further her insights and tries to bring in more deterministic factors that may work towards shaping the public opinion related to terrorism. However, both Mia and I agree on the implications of ethic, limitations and future hopeful prospects.
+
 ## Findings
 
-This study has sought to replicate and extend the influential work of Amélie Godefroidt(@Godefroidt2023) on the impact of terrorism on citizens' political attitudes. Our findings affirm Godefroidt's conclusions, highlighting a definitive influence of terrorist acts on increasing outgroup hostility and political conservatism among the public. Consistent with previous research, we find that these attitudes are significantly shaped by the nature of the terrorism, with Islamist terrorism evoking a more pronounced response in public opinion than other forms of ideological terrorism.
+Our research proves to be only an addition to Godefroidt's theory, however our findings, obviously, point to direct effects of the terrorist acts on citizens' political attitudes. One striking feature here is that of hatred for the out-group members and political conservatism of the prublic following such catastrophies. This affirms that terror creates a feeling of insecurity and a need for JWen safety which is a reason for a more cautious political position. Also, our results put the emphasis on the way terrorism is shaped in influence of terrorism. For instance, ideological violence perpetrated in the name of Islam seems to have a tremendous amplifying impact and induces much stronger responses than violence underpinned by other ideologies. This in accord with former studies focusing on the specific consequences of Islamist extremism on Western countries that associate the latter with the idea of cultural and national identity. Thus it is considered as a threat to the civic and national identity.
 
 ## Ethical Implications and Bias
 
-The ethical considerations of studying such a sensitive topic are paramount. Our methodology, a rigorous meta-analysis, ensures a responsible approach to exploring the connections between terrorism and public sentiment. We also acknowledge potential biases inherent in the original studies included in our analysis, such as the over-representation of Islamist terrorism and under-representation of other forms of ideological violence.
+Studying terrorism from the ethical dimension proves it cannot be underestimated. Being the such consequence causing sensitive part of the topic, and its role for evoking and spreading fear and xenophobia, the scientists should handle it with specific techniques. An application of rigorous meta-analysis methodology assures reliable inquiry, lack of harm, and the polysemic exploration of the problem of the correlation between terrorism and political attitudes. Nevertheless, it should be acknowledged that the existence of bias is one of the key challenges that could be connected with the initial studies in our analysis. For an example, each victim is likely to be bombarded over the media and end up being Islamist terrorism which is highly visible in media coverage and public discourse. Albeit, while one dimension of ideological violence may not be accurately portrayed, other forms such as far-right extremism or eco-terrorism may not be sufficiently emphasized. Such dyads are likely to find themselves in a arena in which distorted views will dominate and the situation will be perceived far from its true scale.
 
 ## Limitations
 
-Our study is not without limitations. The reliance on secondary data limits our ability to account for all potential confounding variables. Additionally, the focus on published literature may introduce a publication bias, as studies with significant findings are more likely to be published.
+In addition to the implemented design in order to realize the highest accuracy of a meta-analysis, we faced several limitations, limiting the range and generality of our findings. Our approach which heavily depends on a secondary data is unable to control for all the conﬂounding variables that may be influential, such as socio-economic class or psychological characteristics of the individual. Furthermore, the use of published sources may leave room for the ‘file drawer’ effect wherein studies with positive results are likely to be published while studies with no significant effect are simply left in the drawer.
 
 ## Future Research
 
-Future research should aim to address these limitations by incorporating primary data collection, exploring a wider range of terrorist ideologies, and examining the impact of terrorism in non-Western contexts. Additionally, longitudinal studies could provide insight into the long-term effects of terrorism on political attitudes.
+In order to rectify these limitations as well as bring clarity into how terrorism changes the political views of a society, there should be an all round approach for the research. At first, applying primary data collection methods, e.g. surveys or interviews, is a good idea since it can bring you concrete views of how people behave in terrible situations. This will ultimately allow the scientists to enable the research system to explore intricacies and contextual factors which may not be available in the datasets that currently exist. In addition, the issue must be viewed from a wider angle, not being limited only to a single terrorist ideology but covering the broad spectrum of ideologies. Our primary target however revolves around Islamist terrorism alone, yet the other extreme movements for instance, right- or left-wing extremism also deserve attention. It is critical for the success of counterterrorism policies and social unity that the concerns are comprehensively analyzed re the ideologies that shape the views of the mass public and the political attitudes. Moreover, as terrorism is seen in many contexts other than the Western world, exploring this issue will contribute to a deeper global comprehension. Terrorism being a very much issues based on the diversity of cultures, societies and their political emotions is not the same across the world. Years long longitudinal studies which track individuals perceptions overtime will provide a wealth of information to the long term effects of terrorism, to name some of these as a mention, radicalization, resilience and social transformation.
 
 ## Conclusion
 
-In conclusion, our replication and extension of Godefroidt's work contribute to a deeper understanding of the complex relationship between terrorism and political attitudes. It is clear that terrorism has a substantial impact on public sentiment, and this knowledge is crucial for policymakers and scholars in developing strategies to maintain democratic resilience in the face of terrorism.
+In conclusion,, the work offer a new insight into what the influence of terrorism on political attitudes was in the past. Our research replicates Godefroidt's study while trying to expand on it. This is to drive home the fact that terrorists are always a constant factor in the society with their potentially dangerous ideologies. Furthermore, there is the endless ethical and biases topic which is very sensitive and proposing lanes for future research for the same problem is well thought out.
 
 \newpage
 
