--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -87,3 +87,14 @@
   pages = {1--48},
   doi = {10.18637/jss.v036.i03},
 }
+
+
+@data{AmelieData,
+author = {Godefroidt, Amélie},
+publisher = {Harvard Dataverse},
+title = {{Replication Data for: How Terrorism Does (and Does Not) Affect Citizens’ Political Attitudes: A Meta-Analysis}},
+year = {2021},
+version = {V1},
+doi = {10.7910/DVN/K4L5YI},
+url = {https://doi.org/10.7910/DVN/K4L5YI}
+}
