--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -55,16 +55,13 @@ We used the following functions: [@readxl], [@ggplot2], [@ggpubr], [@dplyr] in [
 
 Our analysis, visualized in @fig-terrorism-trend, presents a multifaceted view of terrorism studies over the last three and a half decades.
 
-Temporal Trends in Data Collection and Publication
-Panel A: The Year of Data Collection indicates a notable increase in studies on terrorism following significant global events, such as the 9/11 attacks and the rise of the Islamic State (IS). These pivotal moments appear to catalyze research interest, suggesting a reactive pattern in the academic community to explore terrorism's societal effects following high-profile incidents.
+Temporal Trends in Data Collection and Publication Panel A: The Year of Data Collection indicates a notable increase in studies on terrorism following significant global events, such as the 9/11 attacks and the rise of the Islamic State (IS). These pivotal moments appear to catalyze research interest, suggesting a reactive pattern in the academic community to explore terrorism’s societal effects following high-profile incidents.
 
 Panel B: Corroborating this trend, the Year of Publication shows a parallel surge in scholarly outputs, with peaks also corresponding to the aftermath of major terrorist events. The data implies that not only does the occurrence of terrorism prompt more research but also hastens the dissemination of findings, potentially reflecting an urgent need to understand and address the immediate impacts of these events.
 
-Variability in Terrorism Measures
-Panel C: The Terrorism Measures graph illustrates the diversity of metrics used to gauge terrorism's impact. Acts of violence and threat exposure are the most commonly studied, indicating a research emphasis on direct experiences and perceptions of terrorism. Meanwhile, measures of fear and anger, while less frequent, point to an emerging interest in the affective responses terrorism elicits.
+Variability in Terrorism Measures Panel C: The Terrorism Measures graph illustrates the diversity of metrics used to gauge terrorism’s impact. Acts of violence and threat exposure are the most commonly studied, indicating a research emphasis on direct experiences and perceptions of terrorism. Meanwhile, measures of fear and anger, while less frequent, point to an emerging interest in the affective responses terrorism elicits. As seen in Result 1 there is an economic impact in soul of the society which suggests that policymakers notice broader frightening society consequences of terrorist attacks state. Most probably, these measures will reveal the factors of economic disruption, decrease in productivity and infrastructure decomposition, emphasizing the smashed from many aspects impacts of terrorism on society. Through Result 2, the social cohesion indicators, such as relationship disruption and loss of the people's trust, become highly relevant and they show the fact that how any acts of terrorism can severely affect community bonds. This aspect of terrorism emphasizes on an understanding how violence influence the society that is beyond the immediate injuries and scars of the victims. Third, in the result section, the attention is on political aspects as the research has policy implications and encompasses the alterations made in the sphere of government policies, popular opinion and political discourse. This way terrorism becomes not only a state creation problem but also a challenge for structures of governance, and there grows a possibility of a new paradigm in political thinking about ideological conflicts and power redistributions.
 
-Diversity in Types of Terrorism Studied
-Panel D: The Type of Terrorism chart reveals an overwhelming focus on Islamist terrorism, overshadowing other ideologies and forms of terrorism. This skew suggests a potential blind spot in the literature, where state terror and extreme-right terrorism are relatively underexamined, despite their significance in certain regions and contexts.
+Diversity in Types of Terrorism Studied Panel D: The Type of Terrorism chart reveals an over- whelming focus on Islamist terrorism, overshadowing other ideologies and forms of terrorism. This skew suggests a potential blind spot in the literature, where state terror and extreme- right terrorism are relatively underexamined, despite their significance in certain regions and contexts.
 
 ```{r }
 #| label: fig-terrorism-trend
